@@ -10,6 +10,7 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 @SpringBootApplication
 public class SpringTestApplication {
     public static void main(String[] args) {
+        //-Xmx32M -XX:+UseG1GC -Xms32M  -XX:+PrintGCDetails -Xloggc:./gc.log -XX:MetaspaceSize=32M -XX:MaxMetaspaceSize=32M -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./
         org.springframework.boot.SpringApplication.run(SpringTestApplication.class, args);
     }
 }
